slider section added

--- a/index.html
+++ b/index.html
@@ -1,11 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./src/css/main.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+  <title>Home Page</title>
 </head>
+
 <body>
-  <h1>heelo world</h1>
+  <header>
+    <div class="logo">
+      <img src="./src/assets/images/eventopia.png" alt="Eventopia">
+    </div>
+    <div>
+      <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./event.html">All Events</a></li>
+        <li><a href="./categories.html">Categories <i class="fa-solid fa-caret-down"></i></a></li>
+        <li><a href="./contact.html">Contact</a></li>
+      </ul>
+    </div>
+    <div class="register">
+      <a href="./signin.html"><i class="fa-regular fa-user"></i></a>
+      <a href="./signin.html"><i class="fa-solid fa-cart-shopping"></i></a>
+      <a href="./signin.html"><i class="fa-regular fa-heart"></i></a>
+
+
+    </div>
+  </header>
+  <main>
+    <!-- <section class="information">
+      <div></div>
+      <div class="partyImage">
+        <img src="./src/assets/images/event-party-3005668_1280.jpg" alt="">
+      </div>
+    </section> -->
+    <section class="slider-info">
+      <div class="slider-background-image">
+        <div class="blackCard"></div>
+        <div class="blackCard"></div>
+        <div class="blackCard"></div>
+        <div class="blackCard"></div>
+        <div class="blackCard"></div>
+      </div>
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <span>
+              CONCERT
+            </span>
+            <div class="image">
+              <img src="./src/assets/images/concert-image.jpg" alt="">
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="image">
+              <img src="./src/assets/images/kids-image.jpg" alt="">
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="image">
+              <img src="./src/assets/images/opera-image.jpg" alt="">
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="image">
+              <img src="./src/assets/images/festival-image.jpeg" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+      </div>
+    </section>
+    <section class="popularCategories">
+      <h2>Popular Categories</h2>
+      <div class="cards-container">
+        <div class="card">
+          <a href="">
+            <i class="fa-solid fa-music"></i>
+            <h2>Concert</h2>
+            <span>2</span>
+          </a>
+        </div>
+        <div class="card">
+          <a href="">
+            <i class="fa-solid fa-microphone"></i>
+            <h2>Conference</h2>
+            <span>5</span>
+          </a>
+        </div>
+        <div class="card">
+          <a href="">
+            <i class="fa-solid fa-music"></i>
+            <h2>Festival</h2>
+            <span>2</span>
+          </a>
+        </div>
+        <div class="card">
+          <a href="">
+            <i class="fa-solid fa-music"></i>
+            <h2>Travel</h2>
+            <span>2</span>
+          </a>
+        </div>
+      </div>
+    </section>
+  </main>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script type="module" src="./src/scripts/main.js"></script>
 </body>
+
 </html>
