site-information section added

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <a href="">
             <i class="fa-solid fa-music"></i>
             <h2>Concert</h2>
-            <span>2</span>
+            <span>15</span>
           </a>
         </div>
         <div class="card">
@@ -105,15 +105,86 @@
           <a href="">
             <i class="fa-solid fa-music"></i>
             <h2>Festival</h2>
-            <span>2</span>
+            <span>3</span>
           </a>
         </div>
         <div class="card">
           <a href="">
-            <i class="fa-solid fa-music"></i>
+            <i class="fa-solid fa-location-dot"></i>
             <h2>Travel</h2>
-            <span>2</span>
+            <span>8</span>
           </a>
+        </div>
+      </div>
+    </section>
+    <section class="information-about-site">
+      <h2>WHY CHOOSE US?</h2>
+      <div class="info-cards">
+        <div class="card">
+          <div class="number">
+            <span>01</span>
+          </div>
+          <div class="cards-info">
+            <h4>MULTIPLE EVENTS</h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque, exercitationem recusandae error neque
+              labore veniam.</p>
+          </div>
+
+        </div>
+        <div class="card">
+          <div class="number">
+            <span>02</span>
+          </div>
+          <div class="cards-info">
+            <h4>EVENT MANAGEMENT</h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque, exercitationem recusandae error neque
+              labore veniam.</p>
+          </div>
+
+        </div>
+        <div class="card">
+          <div class="number">
+            <span>03</span>
+          </div>
+          <div class="cards-info">
+            <h4>CREDIT CARD PAYMENT</h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque, exercitationem recusandae error neque
+              labore veniam.</p>
+          </div>
+
+        </div>
+        <div class="card">
+          <div class="number">
+            <span>04</span>
+          </div>
+          <div class="cards-info">
+            <h4>LOCATION MANAGEMENT</h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque, exercitationem recusandae error neque
+              labore veniam.</p>
+          </div>
+
+        </div>
+        <div class="card">
+          <div class="number">
+            <span>05</span>
+          </div>
+          <div class="cards-info">
+            <h4>FREE REGISTRING MANAGEMENT</h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque, exercitationem recusandae error neque
+              labore veniam.</p>
+          </div>
+
+        </div>
+        <div class="card">
+          <div class="number">
+            <span>06</span>
+          </div>
+          <div class="cards-info">
+            <h4>EASY TO USE</h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque, exercitationem recusandae error neque
+              labore veniam.</p>
+          </div>
+
         </div>
       </div>
     </section>
