artists section added

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="blackCard"></div>
         <div class="blackCard"></div>
       </div>
-      <div class="swiper mySwiper">
+      <div class="swiper mySwiper1">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <span>
@@ -185,6 +185,60 @@
               labore veniam.</p>
           </div>
 
+        </div>
+      </div>
+    </section>
+    <section class="artists">
+      <h2>AMAZING ARTISTS</h2>
+      <div class="slider-background-image">
+        <div class="blackCard"></div>
+        <div class="blackCard"></div>
+        <div class="blackCard"></div>
+        <div class="blackCard"></div>
+        <div class="blackCard"></div>
+      </div>
+      <div class="swiper mySwiper2">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <div class="image">
+              <img src="./src/assets/images/artist-1.jpg" alt="artst-1">
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="image">
+              <img src="./src/assets/images/artist-2.jpg" alt="artst-1">
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="image">
+              <img src="./src/assets/images/artist-3.jpg" alt="artst-1">
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="image">
+              <img src="./src/assets/images/artist-4.jpg" alt="artst-1">
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="image">
+              <img src="./src/assets/images/artist-5.jpg" alt="artst-1">
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="image">
+              <img src="./src/assets/images/artist-6.jpg" alt="artst-1">
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="image">
+              <img src="./src/assets/images/artist-7.jpg" alt="artst-1">
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="image">
+              <img src="./src/assets/images/artist-8.jpg" alt="artst-1">
+            </div>
+          </div>
         </div>
       </div>
     </section>
