contact section added

--- a/index.html
+++ b/index.html
@@ -28,24 +28,18 @@
         <li><a href="./index.html">Home</a></li>
         <li><a href="./event.html">All Events</a></li>
         <li><a href="./categories.html">Categories <i class="fa-solid fa-caret-down"></i></a></li>
-        <li><a href="./contact.html">Contact</a></li>
+        <li><a href="#contactPage">Contact</a></li>
       </ul>
     </div>
     <div class="register">
       <a href="./signin.html"><i class="fa-regular fa-user"></i></a>
-      <a href="./signin.html"><i class="fa-solid fa-cart-shopping"></i></a>
-      <a href="./signin.html"><i class="fa-regular fa-heart"></i></a>
+      <a href="./basket.html"><i class="fa-solid fa-cart-shopping"></i></a>
+      <a href="./favorites.html"><i class="fa-regular fa-heart"></i></a>
 
 
     </div>
   </header>
   <main>
-    <!-- <section class="information">
-      <div></div>
-      <div class="partyImage">
-        <img src="./src/assets/images/event-party-3005668_1280.jpg" alt="">
-      </div>
-    </section> -->
     <section class="slider-info">
       <div class="slider-background-image">
         <div class="blackCard"></div>
@@ -114,6 +108,29 @@
             <h2>Travel</h2>
             <span>8</span>
           </a>
+        </div>
+      </div>
+    </section>
+    <section class="info-counter">
+      <div class="slider-background-image">
+        <div class="blackCard"></div>
+        <div class="blackCard"></div>
+        <div class="blackCard"></div>
+        <div class="blackCard"></div>
+        <div class="blackCard"></div>
+      </div>
+      <div class="counter-container">
+        <div class="counter">
+          <h3>Events</h3>
+          <div id="counter1">0</div>
+        </div>
+        <div class="counter">
+          <h3>Active Users</h3>
+          <div id="counter2">0</div>
+        </div>
+        <div class="counter">
+          <h3>Sponsors</h3>
+          <div id="counter3">0</div>
         </div>
       </div>
     </section>
@@ -203,44 +220,148 @@
             <div class="image">
               <img src="./src/assets/images/artist-1.jpg" alt="artst-1">
             </div>
+            <div class="text">
+              <h3>
+                Markush Tylor
+              </h3>
+              <span>
+                CEO-EVENTOPIA
+              </span>
+            </div>
           </div>
           <div class="swiper-slide">
             <div class="image">
               <img src="./src/assets/images/artist-2.jpg" alt="artst-1">
+            </div>
+            <div class="text">
+              <h3>
+                Handry Stone
+              </h3>
+              <span>
+                MANAGER-EVENTOPIA
+              </span>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="image">
               <img src="./src/assets/images/artist-3.jpg" alt="artst-1">
             </div>
+            <div class="text">
+              <h3>
+                Perry Madonna
+              </h3>
+              <span>
+                ARTISTS-EVENTOPIA
+              </span>
+            </div>
           </div>
           <div class="swiper-slide">
             <div class="image">
               <img src="./src/assets/images/artist-4.jpg" alt="artst-1">
+            </div>
+            <div class="text">
+              <h3>
+                Kerry Tyson
+              </h3>
+              <span>
+                ARTISTS-EVENTOPIA
+              </span>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="image">
               <img src="./src/assets/images/artist-5.jpg" alt="artst-1">
             </div>
+            <div class="text">
+              <h3>
+                Jhonny Cash
+              </h3>
+              <span>
+                ARTISTS-EVENTOPIA
+              </span>
+            </div>
           </div>
           <div class="swiper-slide">
             <div class="image">
               <img src="./src/assets/images/artist-6.jpg" alt="artst-1">
+            </div>
+            <div class="text">
+              <h3>
+                Bruce Banner
+              </h3>
+              <span>
+                ARTISTS-EVENTOPIA
+              </span>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="image">
               <img src="./src/assets/images/artist-7.jpg" alt="artst-1">
             </div>
+            <div class="text">
+              <h3>
+                Merry Parker
+              </h3>
+              <span>
+                ARTISTS-EVENTOPIA
+              </span>
+            </div>
           </div>
           <div class="swiper-slide">
             <div class="image">
               <img src="./src/assets/images/artist-8.jpg" alt="artst-1">
             </div>
+            <div class="text">
+              <h3>
+                David Jones
+              </h3>
+              <span>
+                CEO-EVENTOPIA
+              </span>
+            </div>
           </div>
         </div>
       </div>
+    </section>
+    <section class="contact-info" id="contactPage">
+      <h2>CONTACT US</h2>
+     <div class="contact-total">
+      <div class="contact-details">
+        <div class="contact-detail">
+          <i class="fa-solid fa-location-dot"></i>
+          <h4>ADDRESS:</h4>
+          <span>1234 Las Vegas Blvd S, Las Vegas, NV 89109, USA</span>
+        </div>
+        <div class="contact-detail">
+          <i class="fa-solid fa-envelope"></i>
+          <h4>EMAIL:</h4>
+          <span>eventopia@company.az</span>
+          <span>eventopia_support@company.az</span>
+        </div>
+        <div class="contact-detail">
+          <i class="fa-solid fa-phone"></i>
+          <h4>CALL US:</h4>
+          <span>1 (234) 567-891</span>
+          <span>1 (456) 789-123</span>
+        </div>
+        <div class="contact-detail contact-us">
+          <h4>CONTACT US</h4>
+          <p>Contact us for a quote. Help or to join the team</p>
+          <div class="logos">
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-pinterest"></i>
+          </div>
+        </div>
+      </div>
+      <div>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d412514.97076261835!2d-115.79886221569197!3d36.123382602113104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80beb782a4f57dd1%3A0x3accd5e6d5b379a3!2sLas%20Vegas%2C%20NV%2C%20USA!5e0!3m2!1sen!2saz!4v1739909181501!5m2!1sen!2saz"
+          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+     </div>
     </section>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
