--- a/index.html
+++ b/index.html
@@ -325,44 +325,52 @@
     </section>
     <section class="contact-info" id="contactPage">
       <h2>CONTACT US</h2>
-     <div class="contact-total">
-      <div class="contact-details">
-        <div class="contact-detail">
-          <i class="fa-solid fa-location-dot"></i>
-          <h4>ADDRESS:</h4>
-          <span>1234 Las Vegas Blvd S, Las Vegas, NV 89109, USA</span>
-        </div>
-        <div class="contact-detail">
-          <i class="fa-solid fa-envelope"></i>
-          <h4>EMAIL:</h4>
-          <span>eventopia@company.az</span>
-          <span>eventopia_support@company.az</span>
-        </div>
-        <div class="contact-detail">
-          <i class="fa-solid fa-phone"></i>
-          <h4>CALL US:</h4>
-          <span>1 (234) 567-891</span>
-          <span>1 (456) 789-123</span>
-        </div>
-        <div class="contact-detail contact-us">
-          <h4>CONTACT US</h4>
-          <p>Contact us for a quote. Help or to join the team</p>
-          <div class="logos">
-            <i class="fa-brands fa-facebook-f"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-pinterest"></i>
+      <div class="contact-total">
+        <div class="contact-details">
+          <div class="contact-detail">
+            <i class="fa-solid fa-location-dot"></i>
+            <h4>ADDRESS:</h4>
+            <span>1234 Las Vegas Blvd S, Las Vegas, NV 89109, USA</span>
+          </div>
+          <div class="contact-detail">
+            <i class="fa-solid fa-envelope"></i>
+            <h4>EMAIL:</h4>
+            <span>eventopia@company.az</span>
+            <span>eventopia_support@company.az</span>
+          </div>
+          <div class="contact-detail">
+            <i class="fa-solid fa-phone"></i>
+            <h4>CALL US:</h4>
+            <span>1 (234) 567-891</span>
+            <span>1 (456) 789-123</span>
+          </div>
+          <div class="contact-detail contact-us">
+            <h4>CONTACT US</h4>
+            <p>Contact us for a quote. Help or to join the team</p>
+            <div class="logos">
+              <i class="fa-brands fa-facebook-f"></i>
+              <i class="fa-brands fa-instagram"></i>
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-pinterest"></i>
+            </div>
           </div>
         </div>
+        <div>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d412514.97076261835!2d-115.79886221569197!3d36.123382602113104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80beb782a4f57dd1%3A0x3accd5e6d5b379a3!2sLas%20Vegas%2C%20NV%2C%20USA!5e0!3m2!1sen!2saz!4v1739909181501!5m2!1sen!2saz"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
       </div>
-      <div>
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d412514.97076261835!2d-115.79886221569197!3d36.123382602113104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80beb782a4f57dd1%3A0x3accd5e6d5b379a3!2sLas%20Vegas%2C%20NV%2C%20USA!5e0!3m2!1sen!2saz!4v1739909181501!5m2!1sen!2saz"
-          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
-     </div>
     </section>
+    <footer>
+      <div class="footer-image">
+        <a href="./index.html"><img src="./src/assets/images/eventopia.png" alt="logo"></a>
+      </div>
+      <div class="footer-text">
+        <p>© 2025 Eventopia. All Rights Reserved.</p>
+      </div>
+    </footer>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script type="module" src="./src/scripts/main.js"></script>
