--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./src/css/main.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <header>
+  <!-- <header>
     <div class="logo">
       <img src="./src/assets/images/eventopia.png" alt="Eventopia">
     </div>
@@ -38,6 +38,39 @@
 
 
     </div>
+  </header>  -->
+  <header>
+    <div class="header_pages">
+      <ul>
+        <li><a href="./event.html">All Events</a></li>
+        <li>
+          <div class="dropdown-category">
+            <span class="category-text">Categories <i class="fa-solid fa-caret-down"></i></span>
+            <div class="dropdown-content_categories">
+              <a href="#">Music</a>
+              <a href="#">For kids</a>
+              <a href="#">Sports</a>
+              <a href="#">Entertainment</a>
+              <a href="#">Conference</a>
+
+            </div>
+          </div>
+        </li>
+        <li><a href="#contactPage">Contact</a></li>
+      </ul>
+    </div>
+    <div class="bars">
+      <i class="fa-solid fa-bars"></i>
+    </div>
+    <a href="./index.html" class="logo">
+      <img src="./src/assets/images/eventopia logo new.png" alt="Eventopia">
+    </a>
+    <div class="register">
+      <a href="./basket.html"><i class="fa-solid fa-cart-shopping"></i></a>
+      <a href="./favorites.html"><i class="fa-regular fa-heart"></i></a>
+      <a href="./login.html"><i class="fa-regular fa-user"></i></a>
+    </div>
+
   </header>
   <main>
     <section class="slider-info">
@@ -355,7 +388,7 @@
             </div>
           </div>
         </div>
-        <div>
+        <div class="map">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d412514.97076261835!2d-115.79886221569197!3d36.123382602113104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80beb782a4f57dd1%3A0x3accd5e6d5b379a3!2sLas%20Vegas%2C%20NV%2C%20USA!5e0!3m2!1sen!2saz!4v1739909181501!5m2!1sen!2saz"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
@@ -365,7 +398,7 @@
     </section>
     <footer>
       <div class="footer-image">
-        <a href="./index.html"><img src="./src/assets/images/eventopia.png" alt="logo"></a>
+        <a href="./index.html"><img src="./src/assets/images/eventopia logo new.png" alt="logo"></a>
       </div>
       <div class="footer-text">
         <p>© 2025 Eventopia. All Rights Reserved.</p>
