--- a/register.html
+++ b/register.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Register</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./src/css/main.css">
 </head>
-
-<body class="login-body">
+<body class="register-body">
     <header>
         <div class="header_pages">
             <ul>
@@ -36,25 +34,35 @@
             <a href="./favorites.html"><i class="fa-regular fa-heart"></i></a>
             <a href="./login.html"><i class="fa-regular fa-user"></i></a>
         </div>
-
+       
     </header>
     <div class="container">
         <div class="form-container">
-            <h1>Login</h1>
+            <h1>Register</h1>
             <form>
-                <div class="form-group">
-                    <input class="login-input" type="email" name="email" placeholder="Email" required>
+                <div class="form-row">
+                    <div class="form-group half">
+                        <input class="register-input" type="text" name="fullname" placeholder="Full Name" required>
+                    </div>
+                    <div class="form-group half">
+                        <input class="register-input" type="text" name="username" placeholder="Username" required>
+                    </div>
                 </div>
                 <div class="form-group">
-                    <input class="login-input" type="password" name="password" placeholder="Password" required>
+                    <input class="register-input" type="email" name="email" placeholder="Email" required>
                 </div>
-                <button type="submit" class="btn">Login</button>
+                <div class="form-group">
+                    <input class="register-input" type="password" name="password" placeholder="Password" required>
+                </div>
+                <div class="form-group">
+                    <input class="register-input" type="password" name="confirm-password" placeholder="Confirm Password" required>
+                </div>
+                <button type="submit" class="btn">Register</button>
             </form>
             <p class="redirect-text">
-                Don't have an account? <a href="register.html">Register here</a>
+                Already have an account? <a href="login.html">Login here</a>
             </p>
         </div>
     </div>
 </body>
-
-</html>
+</html> 
