--- a/event.html
+++ b/event.html
@@ -14,29 +14,10 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./src/css/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-
     <title>Events Page</title>
 </head>
 
 <body>
-    <!-- <header>
-        <a class="logo">
-            <img src="./src/assets/images/eventopia.png" alt="Eventopia">
-        </a>
-        <div>
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./event.html">All Events</a></li>
-                <li><a href="./categories.html">Categories <i class="fa-solid fa-caret-down"></i></a></li>
-                <li><a href="#contactPage">Contact</a></li>
-            </ul>
-        </div>
-        <div class="register">
-            <a href="./signin.html"><i class="fa-regular fa-user"></i></a>
-            <a href="./basket.html"><i class="fa-solid fa-cart-shopping"></i></a>
-            <a href="./favorites.html"><i class="fa-regular fa-heart"></i></a>
-        </div>
-    </header> -->
     <header>
         <div class="header_pages">
             <ul>
@@ -63,10 +44,11 @@
             <h1>All Events</h1>
             <div class="sort-form">
                 <select name="address" id="addressSort">
-                    <option value="" selected hidden>Choose age range</option>
-                    <option value="6">6+</option>
-                    <option value="12">12+</option>
-                    <option value="18">18+</option>
+                    <option value="" selected hidden>Choose Price Range</option>
+                    <option value="6">20-40$</option>
+                    <option value="12">40-70$</option>
+                    <option value="18">70-100%</option>
+                    <option value="18">100$+</option>
                 </select>
                 <select name="" id="">
                     <option value="All">All</option>
@@ -84,7 +66,7 @@
                         <img src="./src/assets/images/my image.jpg" alt="">
                     </div>
                     <div class="cart-content">
-                        <h5>Leman, Naxcivan</h4>
+                       <a href="/eventDetail.html?id=1"> <h5>Leman, Naxcivan</h5></a>
                             <span>80$ - dan</span>
                             <p>11 oct 2005, 01:20</p>
                     </div>
@@ -94,7 +76,7 @@
                         <img src="./src/assets/images/my image.jpg" alt="">
                     </div>
                     <div class="cart-content">
-                        <h5>Leman, Naxcivan</h4>
+                        <h5>Leman, Naxcivan</h5>
                             <span>80$ - dan</span>
                             <p>11 oct 2005, 01:20</p>
                     </div>
@@ -104,7 +86,7 @@
                         <img src="./src/assets/images/my image.jpg" alt="">
                     </div>
                     <div class="cart-content">
-                        <h5>Leman, Naxcivan</h4>
+                        <h5>Leman, Naxcivan</h5>
                             <span>80$ - dan</span>
                             <p>11 oct 2005, 01:20</p>
                     </div>
